test/parserTest/pass/test9.ic
class CS301 extends CSCore { 
    void catFun(){
        int ctz = 9;
    }
}

