test/parserTest/fail/test3.ic
class BadVars {
	int x = 1;
}